--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,4 +1,4 @@
-FROM phusion/baseimage:18.04-1.0.0
+FROM phusion/baseimage:18.04-1.0.0-arm64
 MAINTAINER vesyrak
 
 #########################################
@@ -17,8 +17,8 @@ RUN apt-get update
 RUN apt-get install -y wget lame faad flac sox perl tzdata pv libcrypt-openssl-rsa-perl libio-socket-inet6-perl libwww-perl avahi-utils libio-socket-ssl-perl dbus avahi-daemon mpg123
 #RUN wget http://www.inf.udec.cl/~diegocaro/rpi/libnet-sdp-perl_0.07-1_all.deb
 #RUN wget http://www.forum-raspberrypi.de/mydownloads/downloads/libnet-sdp-perl_0.07-1_all.deb
-#ADD libnet-sdp-perl_0.07-1_all.deb /tmp
-#RUN dpkg -i /tmp/libnet-sdp-perl_0.07-1_all.deb
+ADD libnet-sdp-perl_0.07-1_all.deb /tmp
+RUN dpkg -i /tmp/libnet-sdp-perl_0.07-1_all.deb
 
 ADD avahi-daemon.conf /etc/avahi/avahi-daemon.conf
 
@@ -38,14 +38,12 @@ RUN echo "export NO_AT_BRIDGE=1" >> /etc/bash.bashrc
 ##         RUN INSTALL SCRIPT          ##
 #########################################
 
-COPY install.sh /tmp/
+COPY install-arm.sh /tmp/
 RUN chmod +x /tmp/install.sh; sync; /tmp/install.sh; sync; rm /tmp/install.sh
- 
+
 #########################################
 ##         EXPORTS AND VOLUMES         ##
 #########################################
 VOLUME /config /music
 EXPOSE 3483 3483/udp 9000 9090 5353/udp 9005 38863 46960
-
-
 
