--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -17,8 +17,8 @@ RUN apt-get update
 RUN apt-get install -y wget lame faad flac sox perl tzdata pv libcrypt-openssl-rsa-perl libio-socket-inet6-perl libwww-perl avahi-utils libio-socket-ssl-perl dbus avahi-daemon mpg123
 #RUN wget http://www.inf.udec.cl/~diegocaro/rpi/libnet-sdp-perl_0.07-1_all.deb
 #RUN wget http://www.forum-raspberrypi.de/mydownloads/downloads/libnet-sdp-perl_0.07-1_all.deb
-ADD libnet-sdp-perl_0.07-1_all.deb /tmp
-RUN dpkg -i /tmp/libnet-sdp-perl_0.07-1_all.deb
+#ADD libnet-sdp-perl_0.07-1_all.deb /tmp
+#RUN dpkg -i /tmp/libnet-sdp-perl_0.07-1_all.deb
 
 ADD avahi-daemon.conf /etc/avahi/avahi-daemon.conf
 
