--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -38,7 +38,7 @@ RUN echo "export NO_AT_BRIDGE=1" >> /etc/bash.bashrc
 ##         RUN INSTALL SCRIPT          ##
 #########################################
 
-COPY install-arm.sh /tmp/
+COPY install-arm.sh /tmp/install.sh
 RUN chmod +x /tmp/install.sh; sync; /tmp/install.sh; sync; rm /tmp/install.sh
 
 #########################################
